crates/hir-ty/tests/snapshots/jls_decl_checks__conflicting_default_methods.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/A.java:
package com.example;

interface A {
    default String name() { return "a"; }
}

FILE /src/com/example/B.java:
package com.example;

interface B {
    default String name() { return "b"; }
}

FILE /src/com/example/Diamond.java:
package com.example;

class Diamond implements A, B {}

method name: conflicting-defaults: Class inherits unrelated default methods for 'name()'; it must be overridden
