crates/hir-ty/tests/snapshots/jls_decl_checks__ctor_mismatch.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Ctors.java:
package com.example;

class Ctors {
    Ctors() {}
    Ctors(int x) {}
    <T> Ctors(String s) {}
    Wrong() {}
    public Bad() {}
    <T> Other(String s) {}
}

class Nested {
    Nested() {}
    class Inner {
        Inner() {}
        Nested() {}
        Inner(int x) {}
        void Wrong() {}
    }
}

@6:4: constructor-name-mismatch: Constructor name 'Wrong' is different from the class name 'Ctors'
@7:11: constructor-name-mismatch: Constructor name 'Bad' is different from the class name 'Ctors'
@8:8: constructor-name-mismatch: Constructor name 'Other' is different from the class name 'Ctors'
@15:8: constructor-name-mismatch: Constructor name 'Nested' is different from the class name 'Inner'
