crates/hir-ty/tests/snapshots/jls_decl_checks__ctor_mismatch_enum.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Seasons.java:
package com.example;

enum Seasons {
    SPRING, SUMMER;
    Seasons() {}
    Wrong() {}
}

@5:4: constructor-name-mismatch: Constructor name 'Wrong' is different from the class name 'Seasons'
