crates/hir-ty/tests/snapshots/jls_decl_checks__declared_ctor_explicit_delegation.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Ctors.java:
package com.example;

import java.io.IOException;

class F5 {
    F5() throws IOException {}
}

class F6 extends F5 {
    F6() throws IOException {
        super();
    }
    F6(int x) {
        this();
    }
}
