crates/hir-ty/tests/snapshots/jls_decl_checks__duplicate_class_cross_file.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/A.java:
package com.example;

class Foo {}

FILE /src/com/example/B.java:
package com.example;

class Foo {}

method : duplicate-class: @2:6Duplicate class: com.example.Foo
